@@ -1,0 +1,24 @@
+#ifndef QTMP_H
+#define QTMP_H
+
+#include <utmp.h>
+#ifndef UTMP_FILE
+#ifdef _PATH_UTMP
+#define UTMP_FILE _PATH_UTMP
+#else
+#define UTMP_FILE "/etc/utmp"
+#endif
+#endif
+#define UTMP_INIT \
+    struct utmp utm; \
+    struct utmp *ut = &utm;
+    substdio ssutmp; \
+    char bufutmp[sizeof(struct utmp) * 16]
+#define UTMP_USER ut_name
+#define UTMP_OPEN \
+    if (open_read(UTMP_FILE) == -1) _exit(0); \
+    substdio_fdbuf(&ssutmp,read,fdutmp,bufutmp,sizeof(bufutmp))
+#define UTMP_READ_MORE (substdio_get(&ssutmp,ut,sizeof(utm)) == sizeof(utm))
+#define UTMP_TYPE_MATCHES 1
+
+#endif
